WIP
-----------------------------
* Fuel, Virtual Energy Widget
  - Add "show_low_fuel_warning_flash" and "show_low_energy_warning_flash" options (requested by users "ebeninca"), which show warning flash effect while on low fuel or low virtual energy. This option is enabled by default.
    This warning flash effect plays only a limited number of times, with highlight duration and interval that can be customized via "number_of_warning_flashes, warning_flash_highlight_duration, warning_flash_interval" options.
    Default number of flashes is 10 times, with a highlight duration of 0.4s, and a cooldown interval of 0.4s in-between.

* Wheels Module
  - Brake and tyre wear calculation is now handled by Wheels Module.

* Misc
  - "enable_high_dpi_scaling" option is now enabled by default for new user.
  - Fixed global locale setting for correctly displaying digits and decimal separator in certain system that uses special characters.
  - Auto load preset function now checks load-state only once when player enters track.
  - Various optimization.

2.30.1 (2025-06-12)
-----------------------------
* Major change to API accessing
  - Updated URL addresses for accessing data from LMU's Rest API (due to changes from June update), including new penalty time data that used for accurate pit time estimate.
  - Virtual energy, brake wear, vehicle damage, pit stop related data are now read from "RepairAndRefuel" URL address (same as in v2.28.1).
    Important note:
    "RepairAndRefuel" URL address previously was known to have chance to cause MFD pitstop menu flickering issue if accessed at high frequency. This flickering issue has been acknowledged by game developer, but not yet fixed by game.
    "RepairAndRefuel" is the only address for accessing those important data from LMU Rest API (as of LMU June update), currently there is no other alternatives.