@@ -2501,8 +2501,6 @@ WIDGET_DEFAULT = {
         "font_color_remaining": "#22CC22",
         "bkg_color_remaining": "#222222",
         "show_wear_difference": True,
-        "show_live_wear_difference": True,
-        "freeze_duration": 10,
         "font_color_wear_difference": "#CCCCCC",
         "bkg_color_wear_difference": "#222222",
         "show_lifespan_laps": True,
@@ -2511,6 +2509,9 @@ WIDGET_DEFAULT = {
         "show_lifespan_minutes": True,
         "font_color_lifespan_minutes": "#66CCCC",
         "bkg_color_lifespan_minutes": "#222222",
+        "show_end_stint_remaining": True,
+        "font_color_end_stint_remaining": "#CCCCCC",
+        "bkg_color_end_stint_remaining": "#222222",
         "warning_threshold_remaining": 30,
         "warning_threshold_wear": 3,
         "warning_threshold_laps": 5,
@@ -2523,6 +2524,7 @@ WIDGET_DEFAULT = {
         "column_index_wear_difference": 2,
         "column_index_lifespan_laps": 3,
         "column_index_lifespan_minutes": 4,
+        "column_index_end_stint_remaining": 5,
     },
     "virtual_energy": {
         "enable": True,
