@@ -1,12 +1,18 @@
 WIP
 -----------------------------
 * Fuel, Virtual Energy Widget
-  - Add "show_low_fuel_warning_flash" and "show_low_energy_warning_flash" options (requested by users "ebeninca"), which show warning flash effect while on low fuel or low virtual energy. This option is enabled by default.
+  - [New]Add "show_low_fuel_warning_flash" and "show_low_energy_warning_flash" options (requested by users "ebeninca"), which show warning flash effect while on low fuel or low virtual energy. This option is enabled by default.
     This warning flash effect plays only a limited number of times, with highlight duration and interval that can be customized via "number_of_warning_flashes, warning_flash_highlight_duration, warning_flash_interval" options.
     Default number of flashes is 10 times, with a highlight duration of 0.4s, and a cooldown interval of 0.4s in-between.
 
 * Wheels Module
   - Brake and tyre wear calculation is now handled by Wheels Module.
+  - [New]Add delta wear calculation for accurately estimating tyre wear rate per lap.
+
+* Tyre Wear Widget
+  - [New]Add "show_end_stint_remaining" option, which shows estimated total remaining tyre tread at the of current stint. This option helps to determine whether there is enough tread for current or more stints.
+  - "show_wear_difference" option now shows estimated tyre wear difference per lap (at least one valid lap is required).
+  - Removed "show_live_wear_difference", "freeze_duration" options. 
 
 * Misc
   - "enable_high_dpi_scaling" option is now enabled by default for new user.
